--- a/app/globals.css
+++ b/app/globals.css
@@ -165,6 +165,7 @@ html {
       align-items: flex-start;
       display: flex;
 
+
       > label {
         flex: 0 0 auto;
         margin-right: 0.5rem;
@@ -173,6 +174,7 @@ html {
 
       > div {
         flex: 1 1 auto;
+        margin-top: -0.35rem
       }
     }
 
